// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Join default strategy GIVEN translation files with nested scopes\\n        WHEN join schematic runs\\n        THEN scoped translations are correctly merged into single files 1`] = `
"{
  \\"hello\\": \\"hola\\",
  \\"scope\\": {
    \\"hello\\": \\"hola scope\\"
  }
}"
`;

exports[`Join scope map strategy GIVEN global config with multiple scopes in scopePathMap\\n        WHEN join schematic runs\\n        THEN all scopes are merged correctly using scope map strategy 1`] = `
"{
  \\"hello\\": \\"hola\\",
  \\"scopeA\\": {
    \\"hello\\": \\"hola scope\\"
  },
  \\"scopeB\\": {
    \\"hello\\": \\"hola scope\\"
  }
}"
`;

exports[`Join scope map strategy GIVEN global config with scopePathMap configured\\n        WHEN join schematic runs\\n        THEN translations are merged using scope map strategy 1`] = `
"{
  \\"hello\\": \\"hola\\",
  \\"scope\\": {
    \\"hello\\": \\"hola scope\\"
  }
}"
`;

exports[`Join scope map strategy GIVEN global config with scopePathMap spanning multiple projects\\n        WHEN join schematic runs\\n        THEN translations from all projects are merged correctly 1`] = `
"{
  \\"hello\\": \\"hola\\",
  \\"libA\\": {
    \\"hello\\": \\"hola scope\\"
  },
  \\"libB\\": {
    \\"hello\\": \\"hola scope\\"
  }
}"
`;
